--- a/themes/anadea/layouts/partials/post/keep_in_touch.html
+++ b/themes/anadea/layouts/partials/post/keep_in_touch.html
@@ -1,22 +1,29 @@
-{{ $industries := .GetTerms "industries" }}
-{{ $sales := slice }}
-{{ $salePersonData := dict }}
+{{/* Old realization with different sales */}}
 
-{{ range $industries }}
-  {{ $baseName := path.BaseName .Path }}
-  {{ $industryData := index .Site.Data.industries $baseName }}
-  {{ $sales = $sales | append $industryData.sale }}
-{{ end }}
+{{/*
+  {{ $industries := .GetTerms "industries" }}
+  {{ $sales := slice }}
+  {{ $salePersonData := dict }}
 
-{{$hasMoreThanOneSale := gt (len $sales) 1 }}
-{{$hasNoSale := or (eq (len $sales) 0) (eq (index $sales 0) nil) }}
-{{ $shouldShowHeadOfSale := or $hasMoreThanOneSale $hasNoSale }}
+  {{ range $industries }}
+    {{ $baseName := path.BaseName .Path }}
+    {{ $industryData := index .Site.Data.industries $baseName }}
+    {{ $sales = $sales | append $industryData.sale }}
+  {{ end }}
 
-{{ if $shouldShowHeadOfSale }}
-  {{ $salePersonData = index $.Site.Data.sales "irina-lysenko" }}
-{{ else }}
-  {{ $salePersonData = index $.Site.Data.sales ((index $sales 0) | urlize) }}
-{{ end}}
+  {{$hasMoreThanOneSale := gt (len $sales) 1 }}
+  {{$hasNoSale := or (eq (len $sales) 0) (eq (index $sales 0) nil) }}
+  {{ $shouldShowHeadOfSale := or $hasMoreThanOneSale $hasNoSale }}
+
+  {{ if $shouldShowHeadOfSale }}
+    {{ $salePersonData = index $.Site.Data.sales "irina-lysenko" }}
+  {{ else }}
+    {{ $salePersonData = index $.Site.Data.sales ((index $sales 0) | urlize) }}
+  {{ end}}
+*/}}
+
+{{/* Always use JSON from data/sales/irina-lysenko.json */}}
+{{ $salePersonData := index $.Site.Data.sales "irina-lysenko" }}
 
 <article
   class="keepInTouch"
