--- a/themes/anadea/assets/scss/modules/_markdown.scss
+++ b/themes/anadea/assets/scss/modules/_markdown.scss
@@ -57,12 +57,19 @@
   table {
     border-spacing: 0;
     border-collapse: collapse;
+    table-layout: fixed;
+    width: 100%;
 
     th,
     td {
       padding: clamped(8px, 16px);
       text-align: left;
       border: 1px solid #dddddd;
+
+      hyphens: auto;
+      overflow-wrap: anywhere;
+      word-break: break-word;
+      white-space: normal;
     }
 
     @media screen and (width <= 660px) {
