change header link

--- a/themes/anadea/layouts/partials/menu/services.html
+++ b/themes/anadea/layouts/partials/menu/services.html
@@ -129,7 +129,7 @@
             </div>
 
             <div>
-              <a href="https://anadea.info/services/seo-service" class="subMenu__item"> SEO Services </a>
+              <a href="https://anadea.info/services/staff-augmentation" class="subMenu__item"> Staff Augmentation </a>
             </div>
 
             <div>
