feat: add reviews link

--- a/themes/anadea/layouts/partials/footer.html
+++ b/themes/anadea/layouts/partials/footer.html
@@ -182,6 +182,12 @@
             <img alt="Top Mobile App Development Company" src="/blog/img/social_icons/company.svg" />
           </a>
         </div>
+        
+        <div class="footer__review-group">
+          <a href="https://www.rightfirms.co/company/anadea/reviews" target="_blank" class="footer__wrapperlink">
+            <img alt="Awards achievements" loading="lazy" src="/blog/img/social_icons/review.svg" />
+          </a>
+        </div>
       </div>
     </div>
   </div>
