--- a/themes/anadea/assets/scss/modules/_footer.scss
+++ b/themes/anadea/assets/scss/modules/_footer.scss
@@ -494,7 +494,7 @@ $hover-color: var(--persian-rose);
     }
     &__review-group {
       align-items: center;
-      display: none;
+      display: flex;
       flex-basis: 100%;
       gap: 40px;
       justify-content: center;
