--- a/themes/anadea/layouts/partials/menu/services.html
+++ b/themes/anadea/layouts/partials/menu/services.html
@@ -133,7 +133,7 @@
             </div>
 
             <div>
-              <a href="https://anadea.info/services/business-analysis" class="subMenu__item"> Business Analysis </a>
+              <a href="https://anadea.info/services/it-outsourcing" class="subMenu__item"> IT Outsourcing </a>
             </div>
 
             <div>
@@ -145,7 +145,7 @@
             </div>
 
             <div>
-              <a href="https://anadea.info/services/passkey" class="subMenu__item"> Passkey </a>
+              <a href="https://anadea.info/services/business-analysis" class="subMenu__item"> Business Analysis </a>
             </div>
           </div>
         </div>
